@@ -686,15 +686,14 @@ li.separator {
 #equity_settings legend, #equity_settings legend span { height:2em; }
 #equity_settings h4 { clear:both; font-weight:bold; padding-top:1em; }
 #equity_settings label { float:none; margin-right:0; width:auto; }
-#equity_settings #historical_date label { float:left; margin-right:2em; }
 #equity_settings label input.click { margin-top:0.2em; }
 #equity_settings li { margin-bottom:0.5em; }
-#equity_settings #cbdr-radio-container { float:left; width:34em; }
+#equity_settings #cbdr-radio-container { float:left; width:36em; }
 
-#equity_settings #cbdr-grid-container { float:left; font-size:85%; margin:1em 0 0 0; position:relative; width:29em; }
-#equity_settings #cbdr-grid-container #grid-col-1 { float:left; margin-right:3%; width:6em; }
+#equity_settings #cbdr-grid-container { float:left; font-size:85%; margin:1em 0 0 0; position:relative; width:27em; }
+#equity_settings #cbdr-grid-container #grid-col-1 { float:left; margin-right:3%; width:5em; }
 #equity_settings #cbdr-grid-container #grid-col-2 { float:left; margin-right:0; position:relative; width:16em; }
-#equity_settings #cbdr-grid-container #grid-col-3 { float:left; width:6em; }
+#equity_settings #cbdr-grid-container #grid-col-3 { float:left; width:5em; }
 #equity_settings #cbdr-grid-container p { line-height:1.2; padding-top:0; }
 #equity_settings #cbdr-grid-container #grid-row-middle { position:relative; margin:0 auto; text-align:center; width:100%; }
 #equity_settings #cbdr-grid-container #top-label { margin:1em auto 0.25em; padding-right:0.6em; text-align:center; }
@@ -711,3 +710,6 @@ li.separator {
 #equity_settings #cbdr-grid-container li a:hover { background:#8884D1; } 
 #equity_settings #cbdr-grid-container li a:active,
 #equity_settings #cbdr-grid-container li a.selected { background:#221E6B; }
+
+#r_weight { margin-top:0.5em; margin-bottom:0.5em; }
+#r_weight label { float:left; margin-right:2em; }
