@@ -1,5 +1,5 @@
             <div id="header" class="group">  
-                <h1><a href="<?php echo $calculator_url;?>"><img src="img/Final-Logo-calculator_436x100.png" alt="Climate Equity Reference Calculator" title="Climate Equity Reference Calculator" height="100" width="436"></a> <span>beta</span></h1>
+                <h1><a href="<?php echo $calculator_url;?>"><img src="img/CERP-Calculator-Logo.svg" alt="Climate Equity Reference Calculator" title="Climate Equity Reference Calculator" height="100" width="436"></a> <span>beta</span></h1>
                 <div id="partners">
                     <ul>
                         <li><a id="ecoequity" href="http://www.ecoequity.org">EcoEquity</a></li>
